# jabcode-android

./: .clang-format  .gitignore  .gitmodules  README.md  format-cpp.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/de/cyb3rko/jabcodereader/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jabcodelib.c  jabreader.h
app/src/main/java/de/cyb3rko/jabcodereader/: CameraPreview.java  MainActivity.kt  ReturnObject.java
app/src/main/res/drawable/: detection_status_dot.xml  ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/de/cyb3rko/jabcodereader/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle.kts
lib/src/androidTest/java/de/cyb3rko/jabcodelib/: ExampleInstrumentedTest.kt
lib/src/androidTest/kotlin/de/cyb3rko/jabcodelib/test/: InstrumentedTest.kt  JabCodeDetectTest.kt  JabCodeGenerateTest.kt
lib/src/main/cpp/: jabcodelib.c  jabreader.h
lib/src/main/java/de/cyb3rko/jabcodelib/: JabCodeLib.kt
lib/src/main/kotlin/de/cyb3rko/jabcodelib/: JabCodeGenerationOptions.kt  JabCodeLib.kt  JabCodeOptions.kt
lib/src/test/java/de/cyb3rko/jabcodelib/: ExampleUnitTest.kt
